--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tunis",
+  "homepage": "https://tmarks98.github.io/tmarks98.github.io",
   "version": "2.2.1",
   "private": true,
   "dependencies": {
@@ -30,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "sass": "^1.52.2"
   }
 }
