--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tunis",
-  "homepage": "https://tmarks98.github.io/tmarks98.github.io",
+  "homepage": "https://tmarks98.github.io",
   "version": "2.2.1",
   "private": true,
   "dependencies": {
